--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
-{% load staticfiles %}
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
     <head>
 
@@ -12,7 +12,7 @@
         <meta name="author" content="">
         <link rel="icon" href="../../favicon.ico">
 
-        <title>CallHub Fibonaccii Exercise</title>
+        <title>CallHub Campaign Exercise</title>
 
         <!-- Bootstrap core CSS -->
         <link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
