--- a/templates/core/dashboard.html
+++ b/templates/core/dashboard.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block content %}
     <h2 class="text-center">Callhub: Campaign Exercise</h2>
