contacts create view

--- a/templates/core/dashboard.html
+++ b/templates/core/dashboard.html
@@ -2,7 +2,8 @@
 {% load staticfiles %}
 
 {% block content %}
-    <h2 class="text-center">Callhub: Campaign Exercise</h2>
+    <h2 class="text-center">Welcome to Callhub.</h2>
+    <h3 class="text-center">Create a campaign below</h3>
     <!--<form method="post" action="." >{% csrf_token %}-->
         <!--{{ form.as_p }}-->
         <!--<button type="submit" class="btn btn-primary">Submit</button>-->
